@@ -23,7 +23,7 @@ import java.util.List; // Import List
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity() // Keep this enabled if you use @PreAuthorize elsewhere
 public class SecurityConfig {
 
     private final FirebaseAuth firebaseAuth;
@@ -36,6 +36,9 @@ public class SecurityConfig {
 
     @Bean
     public FirebaseTokenFilter firebaseTokenFilter() {
+        // Initialize filter even if some endpoints are permitAll,
+        // as it populates SecurityContext if a token *is* present,
+        // which can be useful for logging or optional logic in controllers.
         return new FirebaseTokenFilter(firebaseAuth, firestore);
     }
 
@@ -43,26 +46,39 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .cors(withDefaults()) // Apply CORS bean
-                .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(AbstractHttpConfigurer::disable) // Common for stateless APIs
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Stateless session
+                // Add filter BEFORE standard auth filters to process Firebase token
                 .addFilterBefore(firebaseTokenFilter(), UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests(authz -> authz
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow OPTIONS preflight
-                        .requestMatchers("/public/**", "/login", "/signup").permitAll()
-                        // Allow anonymous access to list/process (checked in service)
-                        .requestMatchers(HttpMethod.GET, "/api/plugins", "/api/plugins/**").permitAll() // Broadened GET under /api/plugins
-                        .requestMatchers(HttpMethod.POST, "/api/plugins/**").permitAll() // Broadened POST under /api/plugins
-                        // Admin ONLY endpoints
-                        .requestMatchers(HttpMethod.POST, "/api/plugins/upload").hasRole("ADMIN") // Keep specific admin higher
+                        // --- Pre-flight/Public ---
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // MUST allow OPTIONS preflight requests
+                        .requestMatchers("/public/**", "/login", "/signup").permitAll() // Example public endpoints
+
+                        // --- Plugin Discovery/Listing/Processing (Currently Open) ---
+                        // Allow anyone to see/get plugin info (access controlled within endpoint if needed)
+                        .requestMatchers(HttpMethod.GET, "/api/plugins", "/api/plugins/**").permitAll()
+                        // Allow anyone to attempt processing (access controlled within endpoint if needed)
+                        .requestMatchers(HttpMethod.POST, "/api/plugins/**").permitAll()
+
+                        // --- CHANGE: Allow Debug Endpoints ---
+                        .requestMatchers("/api/debug/**").permitAll() // <<< CHANGED from .hasRole("ADMIN")
+
+                        // --- Admin ONLY Management Endpoints (Keep Restricted) ---
+                        .requestMatchers(HttpMethod.POST, "/api/plugins/upload").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/plugins/{pluginName}").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.POST, "/api/plugins/refresh").hasRole("ADMIN")
-                        .requestMatchers("/api/plugins/unload/**").hasRole("ADMIN")
-                        .requestMatchers("/api/plugins/universal/unload/**").hasRole("ADMIN")
-                        .requestMatchers("/api/debug/**").hasRole("ADMIN")
-                        // Other Authenticated endpoints
-                        .requestMatchers("/api/secure/**").authenticated()
-                        // Fallback for any other /api endpoint
-                        .requestMatchers("/api/**").authenticated() // Secure others by default
+                        .requestMatchers("/api/plugins/unload/**").hasRole("ADMIN") // Assuming pattern covers specific names
+                        .requestMatchers("/api/plugins/universal/unload/**").hasRole("ADMIN") // Assuming pattern covers specific names
+
+                        // --- Other Specific Endpoints ---
+                        .requestMatchers("/api/secure/**").authenticated() // Example: requires any logged-in user
+
+                        // --- Fallback Rule for Unmatched /api/** ---
+                        // Keep this if you want any other future /api endpoints to require login by default
+                        .requestMatchers("/api/**").authenticated()
+
+                        // --- Allow all other requests (e.g., serving frontend static files) ---
                         .anyRequest().permitAll()
                 );
 
@@ -73,19 +89,25 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = getCorsConfiguration();
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration); // Apply config to all /api/** paths
+        source.registerCorsConfiguration("/api/**", configuration); // Apply CORS to all API paths
+        // You might register other paths if needed (e.g., "/" for static files if served by backend)
         return source;
     }
 
     @NotNull
     private static CorsConfiguration getCorsConfiguration() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
-        configuration.setAllowedHeaders(List.of("*")); // Allow all headers for simplicity during debug - RESTRICT IN PRODUCTION
-        // --- FIX: Explicitly allow credentials ---
-        configuration.setAllowCredentials(true); // <<<--- ADD THIS LINE
-        // -----------------------------------------
+        // Specify allowed origins explicitly - '*' is generally discouraged with credentials=true
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173")); // Your frontend URLs
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD")); // Common methods
+        // Allow specific headers needed by your frontend + standard ones + Authorization
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type", "X-Requested-With", "Accept", "Origin")); // Example common headers
+        // configuration.setAllowedHeaders(List.of("*")); // Use '*' carefully with credentials
+        configuration.setAllowCredentials(true); // Crucial for sending/receiving auth tokens/cookies
+        // You might want to configure exposed headers if frontend needs to read custom ones
+        // configuration.setExposedHeaders(Arrays.asList("header1", "header2"));
+        // Optional: Set max age for preflight response caching
+        // configuration.setMaxAge(3600L);
         return configuration;
     }
 }
